fixed the spacing on the skills page

--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -94,7 +94,7 @@ h4 {
   
   .contain {
     position: relative;
-    top: 64px;
+    top: 5px;
   }
 
   .contain *:not(span) {
